tests/fail/expr/match2.stderr
error[E0004]: non-exhaustive patterns: type `i32` is non-empty
 --> tests/fail/expr/match2.rs:3:31
  |
3 |     one_assert::assert!(match 0 {});
  |                               ^
  |
  = note: the matched value is of type `i32`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern as shown
  |
3 ~     one_assert::assert!(match 0 {
4 +         _ => todo!(),
5 ~     });
  |
